--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,9 @@ django-filter
 psycopg2-binary
 drf-yasg
 python-dotenv
+#production needs these packages
+gunicorn
+whitenoise[brotli]
+psycopg2-binary
+dj-database-url
+python-decouple
